folder4/projects/defaultproject/constrainttemplates/two.yaml
apiVersion: opa.k8smgmt.io/v3
kind: ConstraintTemplate
metadata:
  name: one
  project: defaultproject
spec:
  artifact:
    artifact: {}
    options: {}
    type: Yaml
